--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
   <h1>Hello World</h1>
+  <a href = "https://davidwork0802.github.io/WebTest.github.io/page2">Go to Page 2</a>
     <script src="script.js"></script>
   </body>
 </html>
