--- a/page2.html
+++ b/page2.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Test Web 1</title>
+    <title>Test Web 1 page 2</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
   <h1>This is page 2</h1>
+  <a href = "https://davidwork0802.github.io/WebTest.github.io/">back to page 1</a>
     <script src="script.js"></script>
   </body>
 </html>
