--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,7 @@
   <body>
   <h1>This is page 2</h1>
   <a href = "https://davidwork0802.github.io/WebTest.github.io/">back to page 1</a>
+  <a href = "https://davidwork0802.github.io/WebTest.github.io/page3">Go to page 3</a>
     <script src="script.js"></script>
   </body>
 </html>
